# halogenator

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LINUX_SETUP.md  PocReport_glycoside_k2.md  PocReport_polyphenol_k2.md  QUICK_START_LINUX.md  README.md  SUGAR_MASK_IMPLEMENTATION_COMPLETE.md  chunk_complexity_analysis.json  debug_allylic_config.yaml  environment.yml  pyproject.toml  requirements.txt  setup.cfg  test_8_prenylnaringenin.smi  test_flavanone_only.smi  test_flavone.smi  test_naringenin.smi  test_prenyl_only.smi  test_r6_config.yaml  test_r6_debug.yaml  test_r6_prenyl_config.yaml  test_shuffled_chunk.bat  test_simple_methyl.smi  test_single_prenyl.smi
.claude/: settings.local.json
artifacts/: implementation_summary.md
configs/: 8pn_raw.yaml  8pn_strict.yaml  diag_r2_only.yaml  diag_r2a_flavone.yaml  diag_r2b.yaml  diag_r2b_naringenin.yaml  diag_r6.yaml  diag_r6_minimal.yaml  etcm_flavonoids.yaml  etcm_flavonoids_k3.yaml  etcm_pick_k2.yaml  flavone_k2.yaml  flavonoids_k2_prod.yaml  g1_raw.yaml  g1_strict.yaml  halogen_rules_by_class.yaml  m1_raw_macro.yaml  m1_raw_step.yaml  m1_strict.yaml  naringenin_validation_k2.yaml  one_flavone_k2_raw.yaml  p0.yaml  p1-baseline.yml  p1.yaml  p1_test.yaml  pick_k2_compat.yaml  pick_k2_full.yaml  pick_k2_full_compat.yaml  pick_k2_strict.yaml  pr2_small_batch_compat.yaml  pr2_small_batch_compat_final.yaml  pr2_small_batch_compat_v2.yaml  pr2_small_batch_diag_k1.yaml  pr2_small_batch_strict.yaml  pr2_small_batch_strict.yaml.backup  pr2_small_batch_strict_v2.yaml  (+7 more)
(+359 files in other folders)
