# -*- coding: ascii -*-
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "halogenator"
version = "0.1.0"
description = "Halogen substitution system for flavonoids"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Halogenator Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=12.0",
    "PyYAML>=6.0",
]

[project.scripts]
halogenator = "halogenator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]